project.css: Removed fixed height of the banner block to avoid totally messing the site layout on narrow browser windows.
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/trunk@429268 13f79535-47bb-0310-9956-ffa450edef68

--- a/jackrabbit/src/site/xdoc/style/project.css
+++ b/jackrabbit/src/site/xdoc/style/project.css
@@ -56,7 +56,6 @@ body, td, select, input, li
     border: 10px solid #ccc;
     background: ;
     width: 90%;
-    height: 100px;
     }
 
 #breadcrumbs
